# irbis64_MultiTOol

./: CMakeLists.txt  MST.cpp  MST.h  README.md  XRF.cpp  XRF.h  dailyStats.cpp  dailyStats.h  fileStarter.cpp  fileStarter.h  main.cpp  parsing.cpp  parsing.h  singleRegistrationCard.cpp  singleRegistrationCard.h  tableViewExport.cpp  tableViewExport.h  tags.h
.github/workflows/: codeql-analysis.yml
